# fastapi-docker-deploy

./: Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  env.env  pyproject.toml  structure.md
.github/workflows/: Dockerfile  dev-build-and-deploy.yml  main.yml  prod-build-and-deploy.yml
frontend/fastapi-ui/: README.md  package-lock.json  package.json
frontend/fastapi-ui/src/: main.js
msal/auth/: constants.py  main.py  service.py
new-setup/: example.env  main.py
new-setup/auth/: main.py  services.py
new-setup/config/: config.py  database.py
sql scripts/faker/: generate_insert_script.py  insert_users.sql
sql scripts/sql/: create_users_table.sql  delete_users_table.sql  select_users_table.sql
src/: .env.example  main.py
src/config/: config.py  database.py
src/exceptions/: handler.py
src/routes/auth/: controller.py  main.py  models.py  schemas.py
src/routes/check_authorization/: main.py  models.py
src/routes/heartbeat_check/: main.py
src/routes/inventory_counts/: main.py  models.py  schemas.py  service.py
src/routes/list_action/: main.py  models.py  schemas.py  service.py
src/routes/list_catalog/: main.py  models.py  schemas.py  service.py
src/routes/list_dgn/: main.py  models.py  schemas.py  service.py
src/routes/list_event_type/: main.py  models.py  schemas.py  service.py
test/: app2.py
test2/: app3.py
test2/auth/: main.py  models.py  schemas.py
test3/auth/: config.py  controller.py  dependencies.py  main.py  models.py
test4/auth/: dependencies.py  exceptions.py  main.py  utils.py
(+46 files in other folders)
